[package]
name = "ecies-ed25519"
version = "0.5.1"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "ECIES on Twisted Edwards Curve25519 using AES-GCM and HKDF-SHA256"
categories = ["cryptography"]
keywords = ["ecies", "encryption", "ed25519", "curve25519", "aes-gcm"]
repository = "https://github.com/phayes/ecies-ed25519"
readme = "README.md"

[dependencies]
rand = "0.7.3"
curve25519-dalek = "3.1.0"
thiserror = "1.0.24"
hex = "0.4.3"
zeroize = "1.3.0"
# "serde" feature
serde = { version = "1.0.125", optional = true }
# "ring" feature
ring = { version = "0.16.20", optional = true, features = [] }
# "pure_rust" feature
aes-gcm = { version = "0.8.0", optional = true }
sha2 = { version = "0.9.3", optional = true }
digest = { version = "0.9.0", optional = true }
hkdf = { version = "0.10.0", optional = true }

[features]
default = ["pure_rust"]
pure_rust = ["aes-gcm", "sha2", "digest", "hkdf"]

[dev-dependencies]
serde_json = "1.0.64"
serde_cbor = "0.11.1"
