[package]
name = "ecies-ed25519"
version = "0.5.1"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "ECIES on Twisted Edwards Curve25519 using AES-GCM and HKDF-SHA256"
categories = ["cryptography"]
keywords = ["ecies", "encryption", "ed25519", "curve25519", "aes-gcm"]
repository = "https://github.com/phayes/ecies-ed25519"
readme = "README.md"

[dependencies]
rand = "0.8.5"
curve25519-dalek = { version = "4.1.3", features = ["legacy_compatibility"] }
thiserror = "1.0.64"
hex = "0.4.3"
zeroize = "1.8.1"
# "serde" feature
serde = { version = "1.0.210", optional = true }
# "ring" feature
ring = { version = "0.17.8", optional = true, features = [] }
# "pure_rust" feature
aes-gcm = { version = "0.10.3", optional = true }
sha2 = { version = "0.10.8", optional = true }
digest = { version = "0.10.7", optional = true }
hkdf = { version = "0.12.4", optional = true }

[features]
default = ["pure_rust"]
pure_rust = ["aes-gcm", "sha2", "digest", "hkdf"]

[dev-dependencies]
serde_json = "1.0.128"
serde_cbor = "0.11.2"
